--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,13 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="title_home">Home</string>
+    <string name="title_myactivity">My Activity</string>
+    <string name="toast_uploading">Uploading..</string>
+    <string name="intent_type">image/*</string>
+    <string name="modal_yes">yes</string>
+    <string name="modal_cancel">cancel</string>
+    <string name="follow">Follow</string>
+    <string name="unfollow">Unfollow</string>
 </resources>
